best-practices-vpol/restrict-default-sa/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-01
  namespace: default
spec:
  serviceAccountName: my-service-account
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-02
  namespace: default
spec:
  serviceAccountName: app-sa
  containers:
  - name: app
    image: busybox:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-default-01
  namespace: default
spec:
  serviceAccountName: default
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-default-02
  namespace: production
spec:
  serviceAccountName: default
  containers:
  - name: app
    image: busybox:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-empty-01
  namespace: default
spec:
  serviceAccountName: ""
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-missing-01
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-missing-02
  namespace: staging
spec:
  containers:
  - name: app
    image: busybox:latest
